# digital-human

./: .gitignore  README.md  SETUP.md  pitch_evaluator.py  pyproject.toml  requirements.txt  test.ipynb
baseline/: .env.example  .gitignore  README.md  main.py  pyproject.toml  utils.py
baseline/config/: main.yaml
baseline/config/llm/: v1.yaml
baseline/config/stt/: v1.yaml
baseline/config/tts/: v1.yaml
baseline/example/: gt_transcript.txt  pose.json
baseline/module/: llm.py  stt.py  tts.py
poc/digital_human_app/: .dockerignore  .env.example  .gitignore  Dockerfile.frontend  README.md  docker-compose.yml  requirements-backend.txt  requirements-frontend.txt
poc/digital_human_app/app/backend/: main.py
poc/digital_human_app/app/backend/api/: audio2face.py  conversation.py  evaluation.py
poc/digital_human_app/app/backend/models/: __init__.py  schemas.py
poc/digital_human_app/app/backend/services/: audio2face_service.py  metrics_service.py  stt_service.py  tts_service.py  vad_service.py
poc/digital_human_app/app/frontend/: main.py
poc/digital_human_app/app/utils/: storage.py  video_utils.py
poc/digital_human_app/docs/: ARCHITECTURE.md
poc/digital_human_app/examples/: websocket_client_example.py
poc/digital_human_app/scripts/: __init__.py  verify_setup.py
poc/digital_human_app/tests/: __init__.py  test_api_integration.py
poc/digital_human_coach/: .dockerignore  .env.example  .gitignore  DOCKER_GUIDE.md  DOCKER_MIGRATION_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTOR_SUMMARY.md  TEST_REDUNDANCY_ANALYSIS.md  TYPHOON_INTEGRATION_SUMMARY.md  TYPHOON_SETUP.md  VERIFICATION_REPORT.md  pyproject.toml  quick_test.py  requirements-backend.txt  run_backend.py  start-docker.bat  start-docker.sh  test_integration.py  verification_summary.py
poc/digital_human_coach/app/backend/: main.py
poc/digital_human_coach/app/backend/api/: conversation.py  evaluation.py
poc/digital_human_coach/app/backend/models/: __init__.py  schemas.py
poc/digital_human_coach/app/backend/services/: audio2face_service.py  llm_service.py  metrics_service.py  pose_service.py
poc/digital_human_coach/app/config/: config.yaml
poc/digital_human_coach/app/frontend/: main.py
poc/digital_human_coach/app/utils/: storage.py  video_utils.py
poc/digital_human_coach/examples/: conversation_example.py  sample_feedback.md  test_api.py
poc/digital_human_coach/scripts/: list_nvidia_models.py  test_new_evaluation.py
poc/test_assessment/: KAGGLE_SETUP.md  kaggle_poc.py
scripts/: .gitignore  tau.ipynb  yt_download.py
