[project]
name = "digital-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv==1.0.0",
    "openai==1.3.0",
    "sounddevice==0.4.6",
    "soundfile==0.12.1",
    "python-decouple==3.8",
    "gtts>=2.4.0",
    "pygame>=2.1.0",
    "pydub>=0.25.1",
    "ipykernel>=6.30.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
